footer aligned to UNM theme

--- a/index.html
+++ b/index.html
@@ -100,8 +100,48 @@
     </main>
 
     <footer>
-        <img src="unm_logo_horizontal.png" alt="UNM logo" height="35px" />
+        <div class="footer-top">
+            <img src="footer-bg.jpg" height="150px" alt="UNM Albuquerque view" />
+        </div>
+
+        <div class="footer-content">
+            <div class="footer-col">
+                <h3>Contact Info:</h3>
+                <p>Ph (505) 277-1325</p>
+            </div>
+            <div class="footer-col">
+                <h3>Location:</h3>
+                <p><strong>Physical Location:</strong><br>Department of Mechanical Engineering<br>Redondo Drive,
+                    Building 122</p>
+                <p><strong>Mailing Address:</strong><br>MSC01 1150<br>1 University of New Mexico<br>Albuquerque, NM
+                    87131</p>
+            </div>
+            <div class="footer-col">
+                <h3>SOE Links</h3>
+                <a href="https://engineering.unm.edu/" class="link-red">School of Engineering</a>
+            </div>
+            <div class="footer-col">
+                <h3>Useful Links</h3>
+                <a href="https://advance.unm.edu/" class="link-red">Advance at UNM</a><br><br>
+                <a href="https://engineering.unm.edu/give/me-funds.html"><button class="donate-button">GIVE TO UNM<br>MECHANICAL ENGINEERING</button></a>
+            </div>
+        </div>
+
+        <div class="footer-bottom">
+            <div class="footer-bottom-left">
+                <p>© The University of New Mexico, Albuquerque, NM 87131, (505) 277-0111<br>
+                    New Mexico's Flagship University</p>
+            </div>
+            <div class="footer-bottom-right">
+                <a href="https://www.unm.edu/accessibility.html">Accessibility</a>
+                <a href="https://www.unm.edu/legal.html">Legal</a>
+                <a href="https://www.unm.edu/contactunm.html">Contact UNM</a>
+            </div>
+        </div>
+
     </footer>
+
+
 
     <script src="script.js"></script>
 </body>
