--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
             </div>
 
-            <input id="answer-input" type="number" placeholder="Missing component of A·B" style="width: 570px;" />
+            <input id="answer-input" type="number" class="input-responsive" placeholder="Missing component of A·B" />
             <div id="result-text" class="result"></div>
 
             <div class="buttons">
