followed general UNM template and removed ME template

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
         <div
             style="background-color: white; padding: 10px 20px; display: flex; justify-content: space-between; align-items: center;">
-            <img src="unm_me_logo.png" alt="UNM Mechanical Engineering Logo" height="50">
+            <img src="unm_logo_horizontal.png" alt="UNM Mechanical Engineering Logo" height="35">
             <div style="display: flex; align-items: center;">
                 <input type="text" placeholder="Search Engineering…"
                     style="padding: 5px; border-radius: 7px; border: 1px solid #ccc;">
@@ -118,7 +118,7 @@
             <img src="footer-bg.jpg" height="150px" alt="UNM Albuquerque view" />
         </div>
 
-        <div class="footer-content">
+        <!-- <div class="footer-content">
             <div class="footer-col">
                 <h3>Contact Info:</h3>
                 <p>Ph (505) 277-1325</p>
@@ -140,7 +140,7 @@
                 <a href="https://engineering.unm.edu/give/me-funds.html"><button class="donate-button">GIVE TO
                         UNM<br>MECHANICAL ENGINEERING</button></a>
             </div>
-        </div>
+        </div> -->
 
         <div class="footer-bottom">
             <div class="footer-bottom-left">
