banner titles updated

--- a/index.html
+++ b/index.html
@@ -26,10 +26,9 @@
         <nav style="background-color: #ba0c2f; display: flex; justify-content: center;">
             <a href="#" style="color: white; padding: 14px 20px; text-decoration: none; font-weight: bold;">ABOUT</a>
             <a href="#"
-                style="color: white; padding: 14px 20px; text-decoration: none; font-weight: bold;">ACCREDITATION</a>
-            <a href="#" style="color: white; padding: 14px 20px; text-decoration: none; font-weight: bold;">RESEARCH</a>
-            <a href="#" style="color: white; padding: 14px 20px; text-decoration: none; font-weight: bold;">PROGRAMS &
-                DEGREES</a>
+                style="color: white; padding: 14px 20px; text-decoration: none; font-weight: bold;">COURSES</a>
+            <a href="#" style="color: white; padding: 14px 20px; text-decoration: none; font-weight: bold;">RESOURCES</a>
+            <a href="#" style="color: white; padding: 14px 20px; text-decoration: none; font-weight: bold;">INSTRUCTORS</a>
             <a href="#" style="color: white; padding: 14px 20px; text-decoration: none; font-weight: bold;">STUDENTS</a>
         </nav>
     </header>
