--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
         <div
             style="background-color: white; padding: 10px 20px; display: flex; justify-content: space-between; align-items: center;">
-            <img src="unm_logo_horizontal.png" alt="UNM Mechanical Engineering Logo" height="35">
+            <a href="index.html"><img src="unm_logo_horizontal.png" alt="UNM Mechanical Engineering Logo" height="35"></a>
             <div style="display: flex; align-items: center;">
                 <input type="text" placeholder="Search LoboLearn..."
                     style="padding: 5px; border-radius: 7px; border: 1px solid #ccc;">
@@ -24,12 +24,11 @@
             </div>
         </div>
         <nav style="background-color: #ba0c2f; display: flex; justify-content: center;">
-            <a href="#" style="color: white; padding: 14px 20px; text-decoration: none; font-weight: bold;">ABOUT</a>
+            <a href="about.html" style="color: white; padding: 14px 20px; text-decoration: none; font-weight: bold;">ABOUT</a>
             <a href="#"
                 style="color: white; padding: 14px 20px; text-decoration: none; font-weight: bold;">COURSES</a>
             <a href="#" style="color: white; padding: 14px 20px; text-decoration: none; font-weight: bold;">RESOURCES</a>
-            <a href="#" style="color: white; padding: 14px 20px; text-decoration: none; font-weight: bold;">INSTRUCTORS</a>
-            <a href="#" style="color: white; padding: 14px 20px; text-decoration: none; font-weight: bold;">STUDENTS</a>
+            <a href="#" style="color: white; padding: 14px 20px; text-decoration: none; font-weight: bold;">CONTACT</a>
         </nav>
     </header>
 
