--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
         </div>
         <nav style="background-color: #ba0c2f; display: flex; justify-content: center;">
             <a href="about.html" style="color: white; padding: 14px 20px; text-decoration: none; font-weight: bold;">ABOUT</a>
-            <a href="#"
+            <a href="courses.html"
                 style="color: white; padding: 14px 20px; text-decoration: none; font-weight: bold;">COURSES</a>
             <a href="#" style="color: white; padding: 14px 20px; text-decoration: none; font-weight: bold;">RESOURCES</a>
-            <a href="#" style="color: white; padding: 14px 20px; text-decoration: none; font-weight: bold;">CONTACT</a>
+            <a href="contact.html" style="color: white; padding: 14px 20px; text-decoration: none; font-weight: bold;">CONTACT</a>
         </nav>
     </header>
 
