--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             </div>
         </div>
         <nav style="background-color: #ba0c2f; display: flex; justify-content: center;">
+            <a href="index.html" style="color: white; padding: 14px 20px; text-decoration: none; font-weight: bold;">WELCOME</a>
             <a href="about.html" style="color: white; padding: 14px 20px; text-decoration: none; font-weight: bold;">ABOUT</a>
             <a href="courses.html"
                 style="color: white; padding: 14px 20px; text-decoration: none; font-weight: bold;">COURSES</a>
