--- a/about.html
+++ b/about.html
@@ -13,27 +13,22 @@
 
 <body>
     <header>
-        <div
+    <div
             style="background-color: white; padding: 10px 20px; display: flex; justify-content: space-between; align-items: center;">
-            <a href="index.html"><img src="unm_logo_horizontal.png" alt="UNM Mechanical Engineering Logo"
-                    height="35"></a>
+            <a href="index.html"><img src="logo_bold.png" alt="UNM Mechanical Engineering Logo" height="15"></a>
             <div style="display: flex; align-items: center;">
-                <input type="text" placeholder="Search LoboLearn..."
-                    style="padding: 5px; border-radius: 7px; border: 1px solid #ccc;">
-                <button
-                    style="margin-left: 5px; padding: 5px 12px; background-color: #ba0c2f; color: white; border: none; border-radius: 4px; height: 30px;">Search</button>
+                <a target="_blank" href="https://www.unm.edu/"><img src="unm_logo_horizontal.png" alt="UNM Logo" height="28" style="padding: 9px;"></a>
             </div>
         </div>
-        <nav style="background-color: #ba0c2f; display: flex; justify-content: center;">
-            <a href="index.html" style="color: white; padding: 14px 20px; text-decoration: none; font-weight: bold;">WELCOME</a>
-            <a href="about.html"
-                style="color: white; padding: 14px 20px; text-decoration: none; font-weight: bold;">ABOUT</a>
-            <a href="courses.html" style="color: white; padding: 14px 20px; text-decoration: none; font-weight: bold;">COURSES</a>
-            <a href="#"
-                style="color: white; padding: 14px 20px; text-decoration: none; font-weight: bold;">RESOURCES</a>
-            <a href="contact.html" style="color: white; padding: 14px 20px; text-decoration: none; font-weight: bold;">CONTACT</a>
-        </nav>
-    </header>
+
+    <nav style="background-color: #ba0c2f; display: flex; justify-content: center;">
+      <a href="index.html" style="color: white; padding: 14px 20px; text-decoration: none; font-weight: bold;">HOME</a>
+      <a href="about.html" style="color: white; padding: 14px 20px; text-decoration: none; font-weight: bold; background-color: rgba(0,0,0,0.15);">ABOUT</a>
+      <a href="courses.html" style="color: white; padding: 14px 20px; text-decoration: none; font-weight: bold;">COURSES</a>
+      <a href="resources.html" style="color: white; padding: 14px 20px; text-decoration: none; font-weight: bold;">RESOURCES</a>
+      <a href="contact.html" style="color: white; padding: 14px 20px; text-decoration: none; font-weight: bold;">CONTACT</a>
+    </nav>
+  </header>
 
     <!-- MAIN CONTENT -->
     <main>
@@ -43,12 +38,6 @@
 
             <img src="lobolearn_about.svg" alt="Happy student enjoying learning success"
                 style="max-width: 80%; height: auto; margin-top: 20px; margin-bottom: 20px;">
-
-            <!-- <p class="intro-description">
-                LoboLearn is an AI-powered collaborative learning platform developed at the University of New Mexico. It
-                is designed to offer personalized, interactive, and peer-supported learning experiences that empower
-                both students and instructors across a variety of subjects and disciplines.
-            </p> -->
 
             <p class="intro-description">
                 At LoboLearn, our mission is to improve the future of online education by making learning more engaging
