--- a/contact.html
+++ b/contact.html
@@ -13,29 +13,22 @@
 <body>
     <!-- HEADER -->
     <header>
-        <div
+    <div
             style="background-color: white; padding: 10px 20px; display: flex; justify-content: space-between; align-items: center;">
-            <a href="index.html"><img src="unm_logo_horizontal.png" alt="UNM Mechanical Engineering Logo"
-                    height="35"></a>
+            <a href="index.html"><img src="logo_bold.png" alt="UNM Mechanical Engineering Logo" height="15"></a>
             <div style="display: flex; align-items: center;">
-                <input type="text" placeholder="Search LoboLearn..."
-                    style="padding: 5px; border-radius: 7px; border: 1px solid #ccc;">
-                <button
-                    style="margin-left: 5px; padding: 5px 12px; background-color: #ba0c2f; color: white; border: none; border-radius: 4px; height: 30px;">Search</button>
+                <a target="_blank" href="https://www.unm.edu/"><img src="unm_logo_horizontal.png" alt="UNM Logo" height="28" style="padding: 9px;"></a>
             </div>
         </div>
-        <nav style="background-color: #ba0c2f; display: flex; justify-content: center;">
-            <a href="index.html" style="color: white; padding: 14px 20px; text-decoration: none; font-weight: bold;">WELCOME</a>
-            <a href="about.html"
-                style="color: white; padding: 14px 20px; text-decoration: none; font-weight: bold;">ABOUT</a>
-            <a href="courses.html"
-                style="color: white; padding: 14px 20px; text-decoration: none; font-weight: bold;">COURSES</a>
-            <a href="#"
-                style="color: white; padding: 14px 20px; text-decoration: none; font-weight: bold;">RESOURCES</a>
-            <a href="contact.html"
-                style="color: white; padding: 14px 20px; text-decoration: none; font-weight: bold;">CONTACT</a>
-        </nav>
-    </header>
+
+    <nav style="background-color: #ba0c2f; display: flex; justify-content: center;">
+      <a href="index.html" style="color: white; padding: 14px 20px; text-decoration: none; font-weight: bold;">HOME</a>
+      <a href="about.html" style="color: white; padding: 14px 20px; text-decoration: none; font-weight: bold;">ABOUT</a>
+      <a href="courses.html" style="color: white; padding: 14px 20px; text-decoration: none; font-weight: bold;">COURSES</a>
+      <a href="resources.html" style="color: white; padding: 14px 20px; text-decoration: none; font-weight: bold;">RESOURCES</a>
+      <a href="contact.html" style="color: white; padding: 14px 20px; text-decoration: none; font-weight: bold; background-color: rgba(0,0,0,0.15);">CONTACT</a>
+    </nav>
+  </header>
 
     <!-- MAIN CONTENT -->
     <main>
