--- a/resources.html
+++ b/resources.html
@@ -16,9 +16,10 @@
     <div
             style="background-color: white; padding: 10px 20px; display: flex; justify-content: space-between; align-items: center;">
             <a href="index.html"><img src="logo_bold.png" alt="UNM Mechanical Engineering Logo" height="15"></a>
+            <div class="unm-logo">
             <div style="display: flex; align-items: center;">
                 <a target="_blank" href="https://www.unm.edu/"><img src="unm_logo_horizontal.png" alt="UNM Logo" height="28" style="padding: 9px;"></a>
-            </div>
+            </div></div>
         </div>
 
     <nav style="background-color: #ba0c2f; display: flex; justify-content: center;">
